[gd_scene load_steps=3 format=3 uid="uid://cyxesyvbsf6iv"]

[ext_resource type="Script" uid="uid://br7mjjpdty1m1" path="res://start_menu.gd" id="1_juhg0"]
[ext_resource type="PackedScene" uid="uid://1i6pshotldet" path="res://Scenes/quit_button.tscn" id="2_jgtwh"]

[node name="StartMenu" type="CanvasLayer"]
script = ExtResource("1_juhg0")

[node name="Panel" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0.941176)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_font_sizes/font_size = 72
text = "SNAKE"
horizontal_alignment = 1

[node name="HighScoreLabel" type="Label" parent="Panel/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
text = "High Score: 0"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 20

[node name="GridContainer" type="GridContainer" parent="Panel/HBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
columns = 2

[node name="StartButton" type="Button" parent="Panel/HBoxContainer/VBoxContainer/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Start"

[node name="QuitButton" parent="Panel/HBoxContainer/VBoxContainer/MarginContainer/GridContainer" instance=ExtResource("2_jgtwh")]
layout_mode = 2

[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer/MarginContainer/GridContainer/StartButton" to="." method="_on_start_button_pressed"]
